--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -1,1 +1,46 @@
-<h1>Member Page</h1>
+<script src="https://code.jquery.com/jquery.js"></script>
+
+<div id="addSite" class="jumbotron">
+  <button id="addSiteButton" type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"><span class="glyphicon glyphicon-plus"></span> Add a Site
+</button>
+</div>
+
+<div id="sites" class="jumbotron">
+    <h1 id="sitesTitle" class="display-4">Sites</h1>
+    <p class="lead"></p>
+    {{!-- {{#each}} --}}
+    <ul class="list-group">
+  <li class="list-group-item">bootstrap.com <span class="glyphicon glyphicon-remove-circle"></span></li>
+  <li class="list-group-item">w3schools.com <span class="glyphicon glyphicon-remove-circle"></span></li>
+  <li class="list-group-item">github.com <span class="glyphicon glyphicon-remove-circle"></span></li>
+  <li class="list-group-item">lipsum.com <span class="glyphicon glyphicon-remove-circle"></span></li>
+  <li class="list-group-item">fonts.google.com <span class="glyphicon glyphicon-remove-circle"></span></li>
+</ul>
+{{!-- {{/each}} --}}
+</div>
+
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Add a site</h5>
+        <form action="/action_page.php">
+  Website Title: <input type="text" name="title"><br>
+  Website URL: <input type="text" name="url"><br>
+  <input type="submit" value="Submit">
+</form> 
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
