--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,26 +2,85 @@ body {
     width: 100%;
     height: 100%;
     background-image: url(../img/background.png);
-    background-repeat: no-repeat;
+    background-repeat: repeat;
   }
 
-.jumbotron {
+#title {
+    color: white;
+    font-family: 'Galada', cursive;
+    font-size: 60px;
+    margin: 20px;
+}
+
+/* #sitesJumbotron {
     width: 50%;
     position: absolute;
     left: 25%;
+} */
+
+#loginJ {
+    position: absolute;
+    left: 35%;
+    width: 30%;
+    top: 10%;
+}
+
+@media only screen and (max-width: 1023px) {
+    /* index page For mobile phones: */
+    #loginBox {
+        position: absolute;
+    }
+
+    body {
+        background: deeppink;
+    }
+
+    #loginJ {
+        background: deeppink;
+        position: absolute;
+        z-index: 1;
+    }
+
+    #title {
+        position: absolute;
+        z-index: 2;
+    }
+
+    /* members page */
+
+    #buttonText {
+        display: none;
+    }
+}
+
+#loginBox {
+    position: relative;
+    left: -30%;
+}
+
+#loginTitle {
+    position: relative;
+    left: -30%;
+}
+
+#loginSignUp {
+    position: relative;
+    left: -30%;
 }
 
 #email-input {
-    width: 200%;
+    width: 150%;
 }
 
 #password-input {
-    width: 200%;
+    width: 150%;
 }
 
 #sites {
     position: absolute;
-    top: 35%;
+    top: 5%;
+    width: 50%;
+    left: 25%;
 }
 
 #addSite {
@@ -30,8 +89,10 @@ body {
 }
 
 #addSiteButton {
-    position: relative;
-    left: 40%;
+    position: absolute;
+    left: 65%;
+    top: 8%;
+    z-index: 1;
 }
 
 #sitesTitle {
@@ -44,4 +105,13 @@ body {
 
 li {
     font-size: 30px;
+}
+
+#logOut {
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
+    Position: absolute;
+    right: 2%;
+    top: 2%;
 }
