--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -1,22 +1,34 @@
-<script src="https://code.jquery.com/jquery.js"></script>
-
-<div id="addSite" class="jumbotron">
+{{!-- <div id="addSite" class="jumbotron">
   <button id="addSiteButton" type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"><span class="glyphicon glyphicon-plus"></span> Add a Site
 </button>
-</div>
+</div> --}}
+
+<a id="logOut" href="/">Log Out</a>
+
+<button id="addSiteButton" type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"><span class="glyphicon glyphicon-plus"></span><span id="buttonText"> Add a Site</span>
+</button>
 
 <div id="sites" class="jumbotron">
     <h1 id="sitesTitle" class="display-4">Sites</h1>
     <p class="lead"></p>
     {{!-- {{#each}} --}}
     <ul class="list-group">
-  <li class="list-group-item">bootstrap.com <span class="glyphicon glyphicon-remove-circle"></span></li>
-  <li class="list-group-item">w3schools.com <span class="glyphicon glyphicon-remove-circle"></span></li>
-  <li class="list-group-item">github.com <span class="glyphicon glyphicon-remove-circle"></span></li>
-  <li class="list-group-item">lipsum.com <span class="glyphicon glyphicon-remove-circle"></span></li>
-  <li class="list-group-item">fonts.google.com <span class="glyphicon glyphicon-remove-circle"></span></li>
+  <li class="list-group-item"><a href="http://getbootstrap.com" target="_blank">bootstrap</a> <span class="glyphicon glyphicon-remove-circle pull-right"></span></li>
+  <li class="list-group-item"><a href="http://w3schools.com" target="_blank">w3schools</a> <span class="glyphicon glyphicon-remove-circle pull-right"></span></li>
+  <li class="list-group-item"><a href="http://github.com" target="_blank">github</a> <span class="glyphicon glyphicon-remove-circle pull-right"></span></li>
+  <li class="list-group-item"><a href="http://lipsum.com" target="_blank">lipsum</a> <span class="glyphicon glyphicon-remove-circle pull-right"></span></li>
+  <li class="list-group-item"><a href="http://fonts.google.com" target="_blank">google fonts</a> <span class="glyphicon glyphicon-remove-circle pull-right"></span></li>
 </ul>
 {{!-- {{/each}} --}}
+<div class="col-md-12 text-center" class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+  <div class="btn-group mr-2" role="group" aria-label="First group">
+    <button type="button" class="btn btn-primary">1</button>
+    <button type="button" class="btn btn-primary">2</button>
+    <button type="button" class="btn btn-primary">3</button>
+    <button type="button" class="btn btn-primary">4</button>
+  </div>
+</div>
+
 </div>
 
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
