--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,5 +1,4 @@
-  
-  <h1 id="title">Site Seeing</h1>
+<h1 id="title">Site Seeing</h1>
 
   <div id="loginJ" class="jumbotron">
 
@@ -9,9 +8,9 @@
 
       <div class="col-md-6 col-md-offset-3">
 
-        <h2 id="loginTitle">Log In</h2>
+        <h2 id="loginTitle">Sign Up</h2>
 
-        <form id="loginBox" class="login" action="/api/members">
+        <form id="loginBox" class="login" action="/">
 
           <div id="email" class="form-group">
 
@@ -29,13 +28,9 @@
 
           </div>
 
-          <button type="submit" class="btn btn-primary">Login</button>
+          <button type="submit" class="btn btn-primary">Create Account</button>
 
         </form>
-
-        <br />
-
-        <p id="loginSignUp">Or sign up <a href="/api/signup">here</a></p>
 
       </div>
 
@@ -44,5 +39,3 @@
   </div>
 
   </div>
-
-  
