--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,48 +1,33 @@
-  
-  <h1 id="title">Site Seeing</h1>
+<h1 id="title">Site Seeing</h1>
+<div id="loginJ" class="jumbotron">
 
-  <div id="loginJ" class="jumbotron">
-
-<div class="container">
-
+  <div class="container">
     <div class="row">
+        <div class="col-md-6 col-md-offset-3">
 
-      <div class="col-md-6 col-md-offset-3">
+          <h2 id="loginTitle">Log In</h2>
+          <form id="loginBox" class="login" action="/api/members">
+            <div id="email" class="form-group">
+              <label for="exampleInputEmail1">Email address</label>
+              <input type="email" class="form-control" id="email-input" placeholder="Email">
+            </div>
 
-        <h2 id="loginTitle">Log In</h2>
+            <div id="password" class="form-group">
+              <label for="exampleInputPassword1">Password</label>
+              <input type="password" class="form-control" id="password-input" placeholder="Password">
+            </div>
 
-        <form id="loginBox" class="login" action="/api/members">
+            <button type="submit" class="btn btn-primary">Login</button>
+          </form>
 
-          <div id="email" class="form-group">
+          <br />
 
-            <label for="exampleInputEmail1">Email address</label>
+          <p id="loginSignUp">Or sign up <a href="/singnup">here</a></p>
 
-            <input type="email" class="form-control" id="email-input" placeholder="Email">
-
-          </div>
-
-          <div id="password" class="form-group">
-
-            <label for="exampleInputPassword1">Password</label>
-
-            <input type="password" class="form-control" id="password-input" placeholder="Password">
-
-          </div>
-
-          <button type="submit" class="btn btn-primary">Login</button>
-
-        </form>
-
-        <br />
-
-        <p id="loginSignUp">Or sign up <a href="/api/signup">here</a></p>
-
-      </div>
+        </div>
 
     </div>
-
   </div>
-
-  </div>
+</div>
 
   
