working signup and login

--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -3,7 +3,7 @@
 </button>
 </div> --}}
 
-<a id="logOut" href="/">Log Out</a>
+<a id="logOut" href="/api/logout">Log Out</a>
 
 <button id="addSiteButton" type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"><span class="glyphicon glyphicon-plus"></span><span id="buttonText"> Add a Site</span>
 </button>
