--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,41 +1,23 @@
 <h1 id="title">Site Seeing</h1>
 
   <div id="loginJ" class="jumbotron">
-
 <div class="container">
-
     <div class="row">
-
       <div class="col-md-6 col-md-offset-3">
-
         <h2 id="loginTitle">Sign Up</h2>
-
-        <form id="loginBox" class="login" action="/">
-
+        {{!-- <form id="loginBox" class="login" action="/"> --}}
+        <form id="loginBox" class="signup">
           <div id="email" class="form-group">
-
             <label for="exampleInputEmail1">Email address</label>
-
             <input type="email" class="form-control" id="email-input" placeholder="Email">
-
           </div>
-
           <div id="password" class="form-group">
-
             <label for="exampleInputPassword1">Password</label>
-
             <input type="password" class="form-control" id="password-input" placeholder="Password">
-
           </div>
-
           <button type="submit" class="btn btn-primary">Create Account</button>
-
         </form>
-
       </div>
-
     </div>
-
   </div>
-
-  </div>
+</div>
