--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -69,7 +69,7 @@
       </div> --}}
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-        <button id="addUrl" type="submit" class="btn btn-primary">Add Site</button>
+        <button id="addUrl" type="submit" class="addUrl btn btn-primary">Add Site</button>
       </div>
       </form>
     </div>
