--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,4 @@
-  
+
   <h1 id="title">Site Seeing</h1>
 
   <div id="loginJ" class="jumbotron">
@@ -7,7 +7,7 @@
 
     <div class="row">
 
-      <div class="col-md-6 col-md-offset-3">
+      <div class="col-md-6 col-md-offset-1">
 
         <h2 id="loginTitle">Log In</h2>
 
@@ -32,17 +32,31 @@
           <button type="submit" class="btn btn-primary">Login</button>
 
         </form>
+        <br>
 
-        <br />
 
-        <p id="loginSignUp">Or sign up <a href="/api/signup">here</a></p>
 
       </div>
 
+    </div>
+<br>
+
+    <div class="row">
+      <div class="col-md-6 col-md-offset-1">
+        <h4>Login With Google</h4>
+        <a class="btn btn-primary" href="/auth/google">Google</a>
+
+
+      </div>
+    </div>
+<br>
+<br>
+    <div class="row">
+      <div class="col-md-6 col-md-offset-1">
+        <p id="loginSignUp">Or sign up <a href="/api/signup">here</a></p>
+      </div>
     </div>
 
   </div>
 
   </div>
-
-  
