--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -3,7 +3,7 @@
 </button>
 </div> --}}
 
-<a id="logOut" href="/">Log Out</a>
+<a id="logOut" href="/logout">Log Out</a>
 
 <button id="addSiteButton" type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"><span class="glyphicon glyphicon-plus"></span><span id="buttonText"> Add a Site</span>
 </button>
@@ -60,13 +60,13 @@
   Website Title: <input id="inputSiteBox1" type="text" name="title"><br>
   Website URL: <input id="inputSiteBox2" type="text" name="url"><br>
   {{!-- <input type="submit" value="Submit"> --}}
-</form> 
+</form>
         {{!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button> --}}
       </div>
       {{!-- <div class="modal-body">
-        
+
       </div> --}}
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
