--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,7 +1,7 @@
 body {
     width: 100%;
     height: 100%;
-    background-image: url(../img/background.png);
+    background-image: url(../img/congruent_pentagon.png);
     background-repeat: repeat;
   }
 
