--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 	<title>Site Seeing</title>
+
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
         <!-- Optional theme -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
@@ -13,14 +13,16 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
         <link href="https://fonts.googleapis.com/css?family=Galada" rel="stylesheet">
-
         <link rel="stylesheet" href="../../css/styles.css">
-        <script src="./js/login.js"></script>
-        <script src="./js/main.js"></script>
-        <script src="./js/signup.js"></script>
+        
         <base href="/">
 </head>
 <body>
 	{{{ body }}}
+
+        <!-- custom javascript -->
+        <script src="./js/login.js"></script>
+        <script src="./js/main.js"></script>
+        <script src="./js/signup.js"></script>
 </body>
 </html>
