--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -18,9 +18,11 @@
           </div>
           <button type="submit" class="btn btn-primary">Login</button>
         </form>
+        <br>
+        <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
         <br />
         <p id="loginSignUp">Or sign up <a href="/signup">here</a></p>
-        {{!-- <p id="loginSignUp">Or sign up <a href="/">here</a></p> --}}
+        
       </div>
     </div>
   </div>
