--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,6 +14,10 @@
 
 <link href="https://fonts.googleapis.com/css?family=Galada" rel="stylesheet">
 
+<meta name="google-signin-scope" content="profile email">
+<meta name="google-signin-client_id" content="YOUR_CLIENT_ID.apps.googleusercontent.com">
+<script src="https://apis.google.com/js/platform.js" async defer></script>
+
         <link rel="stylesheet" href="../../css/styles.css">
         <script src="./js/login.js"></script>
         <script src="./js/main.js"></script>
