like button added without functionality

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,7 +15,7 @@
 <link href="https://fonts.googleapis.com/css?family=Galada" rel="stylesheet">
 
 <meta name="google-signin-scope" content="profile email">
-<meta name="google-signin-client_id" content="YOUR_CLIENT_ID.apps.googleusercontent.com">
+<meta name="google-signin-client_id" content="596708873396-tcd9ml4b43mr42u0s8ocdv7l32449t5e.apps.googleusercontent.com">
 <script src="https://apis.google.com/js/platform.js" async defer></script>
 
         <link rel="stylesheet" href="../../css/styles.css">
