--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -8,7 +8,7 @@
 <button id="addSiteButton" type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"><span class="glyphicon glyphicon-plus"></span><span id="buttonText"> Add a Site</span>
 </button>
 
-<div id="sites" class="jumbotron">
+<div id="sites" class="jumbotron w3-container w3-animate-opacity">
     <h1 id="sitesTitle" class="display-4">Sites</h1>
     <p class="lead"></p>
     {{!-- {{#each dbSite}} --}}
